# common

./: README.md  pyproject.toml
docs/gateway-separation/analyses/: GATEWAY_SERVICE_ANALYSIS.md
docs/gateway-separation/template/: GATEWAY_ANALYSIS_TEMPLATE.md
src/common/: __init__.py
src/common/config/nginx/: common.nginx.conf
