[tool.poetry]
name = "common"
version = "0.1.0"
description = "Common modules for ORBCOMM Gateway"
authors = ["Aaron Porter <aaron.porter12@yahoo.com>"]
readme = "README.md"
packages = [{ include = "common", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11.6"
fastapi = ">=0.100.0"
uvicorn = ">=0.22.0"
sqlalchemy = ">=2.0.0"
redis = ">=4.5.0"
boto3 = ">=1.26.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-jose = { version = ">=3.3.0", extras = ["cryptography"] }
passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
python-multipart = ">=0.0.6"
aiohttp = ">=3.8.0"
asyncio = ">=3.4.3"
python-dotenv = ">=1.0.0"
lupa = ">=2.0"
prometheus-client = ">=0.17.0"
httpx = ">=0.24.0"
types-python-jose = ">=3.3.0"
types-redis = ">=4.5.0"
types-pyjwt = ">=1.7.1"
PyJWT = ">=2.0.0"
typer = ">=0.9.0"
requests = ">=2.32.3,<3.0.0"
asyncpg = ">=0.30.0"
psycopg2-binary = ">=2.9.9"
psutil = ">=5.9.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.3.0"
pre-commit = ">=3.3.0"
autoflake = ">=2.3.1"
bandit = ">=1.7.5"
lizard = "^1.17.19"

[tool.poetry.group.test.dependencies]
aiosqlite = "^0.21.0"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"
lizard = ">=1.17.10"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"